Fix vertical alignment of profile pic

--- a/client/src/components/Chatroom.module.scss
+++ b/client/src/components/Chatroom.module.scss
@@ -20,6 +20,13 @@
 
 .BlueText {
   color: #3751ff;
+  margin-left: 10px;
+}
+
+.Row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .UserImage {
